[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "torchling"
version = "1.0.0"
description = "A minimal deep learning library using numpy."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Piotr Brutkowski", email="piotrbrutkowski@yahoo.com" }
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.26.4"
]

[project.urls]
"Homepage" = "https://github.com/pbrut/torchling"
"Repository" = "https://github.com/pbrut/torchling"

[tool.hatch.build.targets.wheel]
packages = ["torchling"]
